# py-card

./: .bandit  .env.sample  .gitignore  Dockerfile  README.md  compose-prod.yaml  compose.yaml  manage.py  pyproject.toml  pytest.ini
.nginx/: default.conf.template
py_card/: asgi.py  settings.py  urls.py  wsgi.py
py_card/core/: admin.py  apps.py  models.py  services.py
py_card/core/api/v1/: fields.py  serializers.py  urls.py  views.py
py_card/core/migrations/: 0001_initial.py  0002_creditcard_brand.py  0003_creditcard_created_at_alter_creditcard_number.py  0004_alter_creditcard_number.py
py_card/custom_auth/: admin.py  apps.py  models.py  serializers.py
py_card/custom_auth/api/v1/: urls.py  views.py
py_card/custom_auth/migrations/: 0001_initial.py
scripts/: start-application.sh  wait-for-it.sh
tests/core/: test_custom_date_field.py  test_endpoint.py  test_serializer.py
tests/custom_auth/: test_endpoint.py
